--- a/.github/workflows/python-package-3.yml
+++ b/.github/workflows/python-package-3.yml
@@ -85,3 +85,7 @@ jobs:
     - name: Run python raw_priceline.py --debug
       run: |
         python raw_priceline.py --debug
+    - name: Run python raw_gt.py --debug
+      run: |
+        python raw_gt.py --debug
+        
