--- a/.github/workflows/python-package-4.yml
+++ b/.github/workflows/python-package-4.yml
@@ -80,6 +80,10 @@ jobs:
       run: |
         python raw_priceline.py --debug
 
+    - name: Run python raw_planetmc.py --debug
+      run: |
+        python raw_planetmc.py --debug
+
     - name: Run python raw_gt_2.py --debug
       run: |
         python raw_gt_2.py --debug
