--- a/.github/workflows/python-package-3.yml
+++ b/.github/workflows/python-package-3.yml
@@ -84,8 +84,8 @@ jobs:
         python raw_gt.py --debug
     - name: Run python raw_priceline.py --debug
       run: |
-        python raw_priceline.py --debug
-    - name: Run python raw_planetmc.py --debug
+        python raw_gitlab.py --debug
+    - name: Run python raw_gitlab.py --debug
       run: |
         python raw_planetmc.py --debug
     - name: Run python raw_gt_2.py --debug
