--- a/.github/workflows/python-package-3.yml
+++ b/.github/workflows/python-package-3.yml
@@ -88,4 +88,7 @@ jobs:
     - name: Run python raw_gt_2.py --debug
       run: |
         python raw_gt_2.py --debug
+    - name: Run python my_socialblade_2.py --debug
+      run: |
+        python my_socialblade_2.py --debug
         
