--- a/.github/workflows/python-package-4.yml
+++ b/.github/workflows/python-package-4.yml
@@ -83,6 +83,10 @@ jobs:
     - name: Run python raw_gitlab.py --debug
       run: |
         python raw_gitlab.py --debug
+        
+    - name: Run python my_socialblade_2.py --debug
+      run: |
+        python my_socialblade_2.py --debug
 
     - name: Run python raw_gt_2.py --debug
       run: |
