--- a/.github/workflows/python-package-3.yml
+++ b/.github/workflows/python-package-3.yml
@@ -79,6 +79,9 @@ jobs:
     - name: Run python my_socialblade.py --debug
       run: |
         python my_socialblade.py --debug
+    - name: Run python raw_rg.py --debug
+      run: |
+        python raw_rg.py --debug
     - name: Run python raw_gt.py --debug
       run: |
         python raw_gt.py --debug
