--- a/.github/workflows/python-package-4.yml
+++ b/.github/workflows/python-package-4.yml
@@ -72,6 +72,10 @@ jobs:
       run: |
         python my_socialblade.py --debug
 
+    - name: Run python raw_rg.py --debug
+      run: |
+        python raw_rg.py --debug
+
     - name: Run python raw_gt.py --debug
       run: |
         python raw_gt.py --debug
